[tool.poetry]
name = "base"
version = "0.1.0"
description = ""
authors = ["sinofseven <em.s.00001@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "1.35.39"
boto3-stubs = {version = "1.35.39", extras = ["dynamodb", "events", "s3", "sqs"]}
uuid6 = "2024.7.10"
aws-cloudwatch-logs-url = "1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
